--- a/templates/base.html
+++ b/templates/base.html
@@ -1,8 +1,16 @@
+<!DOCTYPE html>
 {% load static %}
 <html>
     <head>
-        <title>VCard Online</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <link href="https://fonts.googleapis.com/css?family=Roboto:100,900i" rel="stylesheet">
         <link rel="stylesheet" href="{% static 'css/style.css' %}">
+        {% if user.is_authenticated %}
+        <title>{{ user.first_name }} {{ user.last_name }}'s VCard Online</title>
+        {% endif %}
+        <title>VCard Online</title>
     </head>
     <body>
         <div class="sidebar">
