--- a/templates/index.html
+++ b/templates/index.html
@@ -9,116 +9,53 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,900i" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     {% if user.is_authenticated %}
-    <title>{{ user.first_name }} {{ user.last_name }}'s Portfolio</title>
+        <title>{{ user.first_name }} {{ user.last_name }}'s Portfolio</title>
+    {% else %}
+        <title>VCard Online</title>
     {% endif %}
-    <title>Portfolio</title>
 </head>
 
 <body>
 
     <header class="header">
+        {% if user.is_authenticated %}
         <h1 class="header__logo">
-            {% if user.is_authenticated %}
             {{ user.first_name }} {{ user.last_name }}
-            {% endif %}
         </h1>
         <nav class="nav">
             <ul>
                 <li class="nav__link nav__link--active">work</li>
                 <li class="nav__link"> <a href="./about.html">about</a> </li>
                 <li class="nav__link"> <a href="./contact.html">contact</a> </li>
+                <li class="nav__link"> <a href="{% url 'users:edit_profile' %}">Profile</a> </li>
             </ul>
 
         </nav>
+        {% else %}
+        <h1 class="header__logo">
+            VCard Online
+        </h1>
+        <nav class="nav">
+            <ul>
+                <li class="nav__link nav__link--active">
+                    <a href="{% url 'index' %}">enter ID</a>
+                </li>
+                <li class="nav__link"> <a href="{% url 'users:login' %}">login</a> </li>
+                <li class="nav__link"> <a href="{% url 'users:signup' %}">signup</a> </li>
+            </ul>
+
+        </nav>
+        {% endif %}
     </header>
 
     <section class="quote">
         "We are the <strong>music makers,</strong>
         <br/> and we are the <strong>dreamers of dreams."</strong>
     </section>
+    <section class="container">
+        {% block content %}{% endblock content %}
+    </section>
 
-    <main class="container">
-        <div class="proj-grid">
-            <section class="proj-prev" onclick="location.href='./project.html'">
-                <div class="proj-prev__image">
-                    <img src="{% static 'img/photography_1280w.jpg' %}" srcset="
-                        {% static 'img/photography_3000w.jpg' %} 3000w,
-                        {% static 'img/photography_1920w.jpg' %} 1920w,
-                        {% static 'img/photography_0864w.jpg' %} 864w,
-                        {% static 'img/photography_0640w.jpg' %} 640w,
-                        {% static 'img/photography_0640w.jpg' %} 640w,
-                        {% static 'img/photography_0420w.jpg' %} 420w
-                    " alt="project title goes here">
-                </div>
-                <h1 class="proj-prev__heading">
-                    Project Title
-                </h1>
-                <p class="proj-prev__byline">
-                    project keywords would go here
-                </p>
-            </section>
-            <section class="proj-prev">
-                <div class="proj-prev__image">
-                    <img src="{% static 'img/photography_1280w.jpg' %}" srcset="
-                        {% static 'img/photography_3000w.jpg' %} 3000w,
-                        {% static 'img/photography_1920w.jpg' %} 1920w,
-                        {% static 'img/photography_0864w.jpg' %} 864w,
-                        {% static 'img/photography_0640w.jpg' %} 640w,
-                        {% static 'img/photography_0640w.jpg' %} 640w,
-                        {% static 'img/photography_0420w.jpg' %} 420w
-                    " alt="project title goes here">
-                </div>
-                <h1 class="proj-prev__heading">
-                    Project Title
-                </h1>
-                <p class="proj-prev__byline">
-                    project keywords would go here
-                </p>
-            </section>
-            <section class="proj-prev">
-                <div class="proj-prev__image">
-                    <img src="{% static 'img/photography_1280w.jpg' %}" srcset="
-                        {% static 'img/photography_3000w.jpg' %} 3000w,
-                        {% static 'img/photography_1920w.jpg' %} 1920w,
-                        {% static 'img/photography_0864w.jpg' %} 864w,
-                        {% static 'img/photography_0640w.jpg' %} 640w,
-                        {% static 'img/photography_0640w.jpg' %} 640w,
-                        {% static 'img/photography_0420w.jpg' %} 420w
-                    " alt="project title goes here">
-                </div>
-                <h1 class="proj-prev__heading">
-                    Project Title
-                </h1>
-                <p class="proj-prev__byline">
-                    project keywords would go here
-                </p>
-            </section>
-            <section class="proj-prev">
-                <div class="proj-prev__image">
-                    <img src="{% static 'img/photography_1280w.jpg' %}" srcset="
-                        {% static 'img/photography_3000w.jpg' %} 3000w,
-                        {% static 'img/photography_1920w.jpg' %} 1920w,
-                        {% static 'img/photography_0864w.jpg' %} 864w,
-                        {% static 'img/photography_0640w.jpg' %} 640w,
-                        {% static 'img/photography_0640w.jpg' %} 640w,
-                        {% static 'img/photography_0420w.jpg' %} 420w
-                    " alt="project title goes here">
-                </div>
-                <h1 class="proj-prev__heading">
-                    Project Title
-                </h1>
-                <p class="proj-prev__byline">
-                    project keywords would go here
-                </p>
-            </section>
-            <section class="container">
-            {% block content %}{% endblock content %}
-            </section>
-        </div>
-
-
-
-    </main>
 
 </body>
 
