--- a/users/templates/users/edit_profile_form.html
+++ b/users/templates/users/edit_profile_form.html
@@ -1,6 +1,6 @@
-{% extends 'base.html' %}
+{% extends 'index.html' %}
 {% block content %}
-    <h2>Téléverser une photo de profil</h2>
+    <h2>Modifier votre profil</h2>
     <form method="post" enctype="multipart/form-data">
         {{ form.as_p }}
         {% csrf_token %}
