--- a/users/templates/users/password_change_form.html
+++ b/users/templates/users/password_change_form.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'index.html' %}
 {% block content %}
     <h2>Changement de mot de passe</h2>
     <form method="post">
