--- a/templates/index.html
+++ b/templates/index.html
@@ -26,9 +26,11 @@
         <nav class="nav">
             <ul>
                 <li class="nav__link nav__link--active">work</li>
+                <li class="nav__link"> <a href="{% url 'skill:skill_home' %}">Skills</a> </li>
                 <li class="nav__link"> <a href="./about.html">about</a> </li>
                 <li class="nav__link"> <a href="./contact.html">contact</a> </li>
                 <li class="nav__link"> <a href="{% url 'users:edit_profile' %}">Profile</a> </li>
+                <li class="nav__link"> <a href="{% url 'users:logout' %}">Déconnexion</a> </li>
             </ul>
 
         </nav>
