correction gestion retour apres impresison cv et movaise class contact dans contact.html

--- a/cv/templates/cv/contact.html
+++ b/cv/templates/cv/contact.html
@@ -1,6 +1,6 @@
 {% extends 'index.html' %}
 {% block content %}
-<div class="contact flex-column">
+<div class="contact_form flex-column">
     <h2>Contactez-moi</h2>
     <form class="row" action="" method="post">
         {% csrf_token %}
