--- a/static/css/style.css
+++ b/static/css/style.css
@@ -932,6 +932,10 @@ button {
   font-style: italic;
 }
 
+.skills-list ul {
+  list-style: none;
+}
+
 /* quote */
 .quote {
   justify-content: center;
