--- a/users/templates/users/edit_profile_form.html
+++ b/users/templates/users/edit_profile_form.html
@@ -2,8 +2,113 @@
 {% block content %}
     <h2>Modifier votre profil</h2>
     <form method="post" enctype="multipart/form-data">
-        {{ form.as_p }}
+        {{ form.edit_profile }}
         {% csrf_token %}
+        <div class="row">
+            <div class="col-sm">
+                <label class="ms-3" for="{{ edit_form.first_name.id }}">Prénom : </label>
+                <div class="ms-4 mb-3 p-2">
+                    {{ form.first_name }}
+                </div>
+            </div>
+            <div class="col-sm">
+                <label class="ms-3" for="{{ edit_form.last_name.id }}">Nom : </label>
+                <div class="ms-4 mb-3 p-2">
+                    {{ form.last_name }}
+                </div>
+            </div>
+            <div class="col-sm">
+                <label class="ms-3" for="{{ edit_form.birth_date.id }}">Date de naissance : </label>
+                <div class="ms-4 mb-3 p-2">
+                    {{ form.birth_date }}
+                </div>
+            </div>
+        </div>
+        <hr>
+        <div class="row">
+            <div class="col-sm">
+                <label class="ms-3" for="{{ edit_form.email.id }}">Email : </label>
+                <div class="ms-4 mb-3 p-2">
+                    {{ form.email }}
+                </div>
+            </div>
+            <div class="col-sm">
+                <label class="ms-3" for="{{ edit_form.phone.id }}">Telephone : </label>
+                <div class="ms-4 mb-3 p-2">
+                    {{ form.phone }}
+                </div>
+            </div>
+            <div class="col-sm">
+                <label class="ms-3" for="{{ edit_form.mobile.id }}">Mobile : </label>
+                <div class="ms-4 mb-3 p-2">
+                    {{ form.mobile }}
+                </div>
+            </div>
+        </div>
+        <hr>
+        <div class="row">
+            <div class="col-sm">
+                <label class="ms-3" for="{{ edit_form.number.id }}">Numéro : </label>
+                <div class="ms-4 mb-3 p-2">
+                    {{ form.number }}
+                </div>
+            </div>
+            <div class="col-sm">
+                <label class="ms-3" for="{{ edit_form.street.id }}">Nom de rue : </label>
+                <div class="ms-4 mb-3 p-2">
+                    {{ form.street }}
+                </div>
+            </div>
+            <div class="col-sm">
+                <label class="ms-3" for="{{ edit_form.zip_code.id }}">Zip Code : </label>
+                <div class="ms-4 mb-3 p-2">
+                    {{ form.zip_code }}
+                </div>
+            </div>
+            <div class="col-sm">
+                <label class="ms-3" for="{{ edit_form.city.id }}">Ville : </label>
+                <div class="ms-4 mb-3 p-2">
+                    {{ form.city }}
+                </div>
+            </div>
+            <div class="col-sm">
+                <label class="ms-3" for="{{ edit_form.state.id }}">Etat : </label>
+                <div class="ms-4 mb-3 p-2">
+                    {{ form.state }}
+                </div>
+            </div>
+            <div class="col-sm">
+                <label class="ms-3" for="{{ edit_form.country.id }}">Pays : </label>
+                <div class="ms-4 mb-3 p-2">
+                    {{ form.country }}
+                </div>
+            </div>
+        </div>
+        <hr>
+        <div class="row">
+            <div class="col-sm">
+                <label class="ms-3" for="{{ edit_form.linkedin_url.id }}">LinkedIn : </label>
+                <div class="ms-4 mb-3 p-2">
+                    {{ form.linkedin_url }}
+                </div>
+            </div>
+            <div class="col-sm">
+                <label class="ms-3" for="{{ edit_form.git_url.id }}">GitHub : </label>
+                <div class="ms-4 mb-3 p-2">
+                    {{ form.git_url }}
+                </div>
+            </div>
+            <div class="col-sm">
+                <label class="ms-3" for="{{ edit_form.profile_photo.id }}">Photo : </label>
+                <div class="ms-4 mb-3 p-2">
+                    {{ form.profile_photo }}
+                </div>
+            </div>
+            <div class="col-sm">
+                <img src="{{ user.profile_photo.url }}">
+            </div>
+        </div>
+
         <button class="btn btn-secondary mt-2 mb-2 me-4" type="submit" >Enregistrer</button>
     </form>
 {% endblock content %}
