--- a/portfolio/templates/portfolio/create_portfolio.html
+++ b/portfolio/templates/portfolio/create_portfolio.html
@@ -2,21 +2,27 @@
 {% block content %}
     <h2 class="text-center mb-4">Ajouter un Portfolio</h2>
 
-    <div class="d-flex flex-column mb-4 col-sm-6">
-        <form method="post" enctype="multipart/form-data">
+    <div class="d-block p-2">
+        <form class="form__field" method="post" enctype="multipart/form-data">
             {% csrf_token %}
             {{ portfolio_form.edit_portfolio }}
-            <label class="ms-3" for="{{ portfolio_form.title.id }}">Titre</label>
-            <div class="ms-4 mb-3 p-2">
-                {{ portfolio_form.title}}
-            </div>
-            <label class="ms-3" for="{{ portfolio_form.description.id }}">Phrase de Bienvenu</label>
-            <div class="ms-4 mb-3 p-2">
-                {{ portfolio_form.welcome_sentence}}
-            </div>
-            <label class="ms-3" for="{{ portfolio_form.date_started.id }}">Texte d'introduction</label>
-            <div class="ms-4 mb-3 p-2">
-                {{ portfolio_form.introduction_text}}
+            <div class="row">
+                <div class="col-sm">
+                    <label class="ms-3" for="{{ portfolio_form.title.id }}">Titre</label>
+                    <div class="ms-4 mb-3 p-2">
+                        {{ portfolio_form.title}}
+                    </div>
+                    <label class="ms-3" for="{{ portfolio_form.description.id }}">Phrase de Bienvenu</label>
+                    <div class="ms-4 mb-3 p-2">
+                        {{ portfolio_form.welcome_sentence}}
+                    </div>
+                </div>
+                <div class="col-sm">
+                    <label class="ms-3" for="{{ portfolio_form.date_started.id }}">Texte d'introduction</label>
+                    <div class="ms-4 mb-3 p-2">
+                        {{ portfolio_form.introduction_text}}
+                    </div>
+                </div>
             </div>
             {% include 'portfolio/partials/validation_buttons_snippet.html' with word='Envoyer' %}
         </form>
