--- a/users/templates/users/partials/profile_menu_snippet.html
+++ b/users/templates/users/partials/profile_menu_snippet.html
@@ -9,4 +9,9 @@
             Générer Code Invité
         </a>
     </li>
+    <li class="nav-item">
+        <a class="btn btn--full-width btn-secondary" href="{% url 'users:password_change' %}">
+            Changer le mot de passe
+        </a>
+    </li>
 </ul>
