--- a/users/templates/users/password_change_form.html
+++ b/users/templates/users/password_change_form.html
@@ -4,6 +4,6 @@
     <form method="post">
         {{ form.as_p }}
         {% csrf_token %}
-        <button type="submit" >Changer le mot de passe</button>
+        {% include 'users/partials/validation_buttons_snippet.html' with word='Valider' %}
     </form>
 {% endblock content %}
