--- a/cv/templates/cv/create_cv.html
+++ b/cv/templates/cv/create_cv.html
@@ -6,7 +6,7 @@
     <h2 class="text-center mb-4">Ajouter un CV</h2>
 
     <div class="row">
-        <form method="post" enctype="multipart/form-data">
+        <form class="form__field" method="post" enctype="multipart/form-data">
             {% csrf_token %}
             {{ cv_form.edit_cv }}
             <div class="row">
