--- a/cv/templates/cv/create_formation.html
+++ b/cv/templates/cv/create_formation.html
@@ -8,7 +8,7 @@
 
 
     <div class="d-flex flex-column mb-4 col-sm-6">
-        <form method="post" enctype="multipart/form-data">
+        <form class="form__field" method="post" enctype="multipart/form-data">
             {% csrf_token %}
             {{ formation_form.edit_formation }}
             <label class="ms-3" for="{{ formation_form.title.id }}">Intitulé de la Formation</label>
