--- a/cv/templates/cv/edit_experience.html
+++ b/cv/templates/cv/edit_experience.html
@@ -4,35 +4,41 @@
 {% endblock sidebar %}
 {% block content %}
     {% if experience.user == request.user %}
-        <h2 class="text-center mb-4">Modifier votre Formation</h2>
+        <h2 class="text-center mb-4">Modifier votre Experience</h2>
 
         <div class="d-block p-2">
-            <form method="post" enctype="multipart/form-data">
+            <form class="form__field" method="post" enctype="multipart/form-data">
                 {% csrf_token %}
                 {{ edit_form.edit_experience }}
-                <label class="ms-3" for="{{ edit_form.title.id }}">Intitulé du Poste</label>
-                <div class="ms-4 mb-3 p-2">
-                    {{ edit_form.title}}
-                </div>
-                <label class="ms-3" for="{{ edit_form.company_name.id }}">Nom de la Société</label>
-                <div class="ms-4 mb-3 p-2">
-                    {{ edit_form.company_name}}
-                </div>
-                <label class="ms-3" for="{{ edit_form.location.id }}">Lieu / Ville</label>
-                <div class="ms-4 mb-3 p-2">
-                    {{ edit_form.location}}
-                </div>
-                <label class="ms-3" for="{{ edit_form.date_started.id }}">Date début</label>
-                <div class="ms-4 mb-3 p-2">
-                    {{ edit_form.date_started}}
-                </div>
-                <label class="ms-3" for="{{ edit_form.date_end.id }}">Date fin</label>
-                <div class="ms-4 mb-3 p-2">
-                    {{ edit_form.date_end}}
-                </div>
-                <label class="ms-3" for="{{ edit_form.tasks.id }}">Tâches / Descriptif du Poste</label>
-                <div class="ms-4 mb-3 p-2">
-                    {{ edit_form.tasks}}
+                <div class="row">
+                    <div class="col-sm">
+                        <label class="ms-3" for="{{ edit_form.title.id }}">Intitulé du Poste</label>
+                        <div class="ms-4 mb-3 p-2">
+                            {{ edit_form.title}}
+                        </div>
+                        <label class="ms-3" for="{{ edit_form.company_name.id }}">Nom de la Société</label>
+                        <div class="ms-4 mb-3 p-2">
+                            {{ edit_form.company_name}}
+                        </div>
+                        <label class="ms-3" for="{{ edit_form.location.id }}">Lieu / Ville</label>
+                        <div class="ms-4 mb-3 p-2">
+                            {{ edit_form.location}}
+                        </div>
+                        <label class="ms-3" for="{{ edit_form.date_started.id }}">Date début</label>
+                        <div class="ms-4 mb-3 p-2">
+                            {{ edit_form.date_started}}
+                        </div>
+                        <label class="ms-3" for="{{ edit_form.date_end.id }}">Date fin</label>
+                        <div class="ms-4 mb-3 p-2">
+                            {{ edit_form.date_end}}
+                        </div>
+                    </div>
+                    <div class="col-sm">
+                        <label class="ms-3" for="{{ edit_form.tasks.id }}">Tâches / Descriptif du Poste</label>
+                        <div class="ms-4 mb-3 p-2">
+                            {{ edit_form.tasks}}
+                        </div>
+                    </div>
                 </div>
                 {% include 'cv/partials/validation_buttons_snippet.html' with word='Envoyer' %}
             </form>
