--- a/cv/templates/cv/edit_hobbies.html
+++ b/cv/templates/cv/edit_hobbies.html
@@ -7,7 +7,7 @@
         <h2 class="text-center mb-4">Modifier votre Centre d'Intérêt</h2>
 
         <div class="d-block p-2">
-            <form method="post" enctype="multipart/form-data">
+            <form class="form__field" method="post" enctype="multipart/form-data">
                 {% csrf_token %}
                 {{ edit_form.edit_hobbies }}
                 <label class="ms-3" for="{{ edit_form.title.id }}">Titre</label>
