--- a/project/templates/project/create_project.html
+++ b/project/templates/project/create_project.html
@@ -3,7 +3,7 @@
     <h2 class="text-center mb-4">Ajouter un Projet</h2>
 
     <div class="row">
-        <form method="post" enctype="multipart/form-data">
+        <form class="form__field" method="post" enctype="multipart/form-data">
             {% csrf_token %}
             {{ project_form.edit_project }}
             <div class="row">
