--- a/skill/templates/skill/create_softskill.html
+++ b/skill/templates/skill/create_softskill.html
@@ -6,7 +6,7 @@
     <h2 class="text-center mb-4">Ajouter une Softskill</h2>
 
     <div class="d-flex flex-column mb-4">
-        <form method="post" enctype="multipart/form-data">
+        <form class="form__field" method="post" enctype="multipart/form-data">
             {% csrf_token %}
             {{ softskill_form.edit_softskill }}
             <label class="ms-3" for="{{ softskill_form.title.id }}">Titre</label>
