--- a/skill/templates/skill/create_technology.html
+++ b/skill/templates/skill/create_technology.html
@@ -6,7 +6,7 @@
     <h2 class="text-center mb-4">Ajouter une Technologie</h2>
 
     <div class="d-flex flex-column mb-4">
-        <form method="post" enctype="multipart/form-data">
+        <form class="form__field" method="post" enctype="multipart/form-data">
             {% csrf_token %}
             {{ technology_form.edit_technology }}
             <label class="ms-3" for="{{ technology_form.title.id }}">Titre</label>
