--- a/static/sass/Utils/_variables.scss
+++ b/static/sass/Utils/_variables.scss
@@ -9,4 +9,4 @@ $gradient-header-background: linear-gradient(45deg, rgba(124,139,193,1) 0%, rgba
 $gradient-btn-background: radial-gradient(circle, rgba(147,149,150,1) 0%, rgba(102,102,103,1) 100%);
 $colour-btn-background-hover: #15DEA5;
 $color-btn-hover: #D6FFF5;
-$colour-nav-active: #001534;
+$colour-nav-active: #3c4754;
