--- a/users/templates/users/edit_profile_form.html
+++ b/users/templates/users/edit_profile_form.html
@@ -1,7 +1,7 @@
 {% extends 'index.html' %}
 {% block content %}
-    <h2>Modifier votre profil</h2>
-    <form method="post" enctype="multipart/form-data">
+    <h2 class="text-center mb-4">Modifier votre profil</h2>
+    <form class="form__field" method="post" enctype="multipart/form-data">
         {{ form.edit_profile }}
         {% csrf_token %}
         <div class="row">
@@ -86,13 +86,11 @@
         </div>
         <hr>
         <div class="row">
-            <div class="col-sm">
+            <div class="col-sm-6">
                 <label class="ms-3" for="{{ edit_form.linkedin_url.id }}">LinkedIn : </label>
                 <div class="ms-4 mb-3 p-2">
                     {{ form.linkedin_url }}
                 </div>
-            </div>
-            <div class="col-sm">
                 <label class="ms-3" for="{{ edit_form.git_url.id }}">GitHub : </label>
                 <div class="ms-4 mb-3 p-2">
                     {{ form.git_url }}
@@ -109,6 +107,6 @@
             </div>
         </div>
 
-        <button class="btn btn-secondary mt-2 mb-2 me-4" type="submit" >Enregistrer</button>
+        {% include 'users/partials/validation_buttons_snippet.html' with word='Enregistrer' %}
     </form>
 {% endblock content %}
