--- a/users/templates/users/password_change_done.html
+++ b/users/templates/users/password_change_done.html
@@ -1,5 +1,5 @@
 {% extends 'index.html' %}
 {% block content %}
     <h2>Mot de passe modifié avec succès</h2>
-    <p>Vous avez changé votre mot de passe avec succès ! Cliquez <a href={% url 'home' %}>ici</a> pour revenir à la page d’accueil.</p>
+    <p>Vous avez changé votre mot de passe avec succès ! Cliquez <a href="{% url 'users:profile_home' %}">ici</a> pour revenir au profile.</p>
 {% endblock content %}
